fix typo and update readme
